fix(material/icon): hides .mdc-button .mat-icon on mobile screens
Updates previous fix by updating documentation on the usage of
mat-icon within mdc-button to notify developers that mat-icon
is set to be hidden on mobile/xsmall screens to improve
accessibility and recommends the usage of aria-label or
aria-labelledby to notify screenreaders of the information that
mat-icon is supposed to convey.

Fixes b/250063405

--- a/src/material/icon/icon.scss
+++ b/src/material/icon/icon.scss
@@ -1,3 +1,4 @@
+@use '../core/style/variables';
 @use '../core/style/vendor-prefixes';
 @use './m2-icon';
 @use '../core/tokens/token-utils';
@@ -80,4 +81,12 @@ mat-icon {
   letter-spacing: 0;
   word-spacing: 0;
   line-height: 1;
+}
+
+// Makes button icon visibility hidden to fix b/250063405 to avoid
+// overrunning into sibling/neighboring elements.
+@media (variables.$xsmall) {
+  .mdc-button .mat-icon {
+    visibility: hidden;
+  }
 }
